z-index bug fix for dropdown and map components

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body,
 
 .leaflet-bottom,
 .leaflet-control,
-.leaflet.pane,
-.leaflet.top {
-    z-index: 0 !important;
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
 }
